--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,29 @@
-# Enviromnment files
 
 .env
+node_modules
 
-# Binaries for programs and plugins
-
-*.exe
-
-*.exe~
-
-*.dll
-
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
+*.o
+*.a
 *.so
 
-*.dylib
+# Folders
+_obj
+_test
+vendor/
 
-# Test binary, built with `go test -c`
+# logs
+*.log
 
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-
+# Compiled binary files
+*.exe
 *.out
 
-# Dependency directories (remove the comment below to include it)
+# macOS specific files
+.DS_Store
 
-# vendor
+# Go specific files
+# Compiled binary for packages and commands
+/bin/
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
